# rat-experiment

./: .gitignore  LICENSE  RAT-phase0-experiment.md  README.md  config.py  pyproject.toml  requirements.txt
examples/: quickstart.py
experiments/: D2_SUMMARY.md  analyze_d1_asymmetry.py  analyze_d1_figures.py  gen_mn_figures.py  generate_bucket_figure.py  generate_d2a_figures.py  generate_d2a_latex.py  phase1_regression_analysis.py  phase1_supplemental.py  run_analysis.py  run_baseline_comparison.py  run_c1_sick.py  run_c1b_allnli_full.py  run_c2_scaling.py  run_c2b_multimodel_rag.py  run_c3_asymmetric_zscore.py  run_c4_large_model.py  run_d1_alignment_comparison.py  run_d1_scaling_ceiling.py  run_d2_phase0_sanity.py  run_d2_phase1_basic.py  run_d2_phase2_comparison.py  run_d2_phase3_rdm.py  run_d2_q3_analysis.py  run_d2a_analysis.py  run_d2a_embed_all.py  run_d2a_matrix.py  run_db_scaling.py  run_db_scaling_ac.py  run_e1_ratauto.py  run_e2_threshold.py  run_mn_validation.py  run_phase0.py  run_phase1.py  run_phase2.py  run_phase2b.py  run_phase3.py  run_phase4_analysis_correlation.py  run_phase4_analysis_supplement.py  run_phase4_step1.py  (+9 more)
paper/: main.tex  neurips_2024.sty
rat/: __init__.py  hub.py  kernels.py  normalize.py  sampling.py  translator.py
results/: analysis_bc_failure.json  baseline_comparison.json  c1_allnli.json  c1b_allnli_full.json  c2_scaling.json  c2a_report.md  c2a_retention_table.json  c2b_multimodel_rag.json  c2b_report.md  c2c_gateway.json  c2c_report.md  c3_asymmetric_zscore.json  c4_large_model.json  d2a_latex_tables.tex  d2a_matrix.json  d2a_pair_features.csv  e1_direction_accuracy.csv  e1_ratauto_nonoracle.csv  e2_threshold_sensitivity.csv  experiment_log.txt  metrics.json  paper_abstract_draft.md  paper_method_draft.md  paper_outline.md  paper_s1_intro_draft.md  paper_s4_experiments_draft.md  paper_s5_analysis_draft.md  paper_s6_related_draft.md  paper_s6s7_draft.md  phase1_metrics.json  phase1_regression.json  phase2_cross_validation.json  phase2b_diagnosis.json  phase3_normalization.json  phase4_analysis_correlation.json  phase4_step1.json  phase4_step2.json  phase4_step3.json  phase4_step3b.json  phase4_step3c.json  (+4 more)
scripts/: make_figure1.py
src/: anchor_sampler.py  baselines.py  embedder.py  evaluator.py  relative_repr.py  visualizer.py
tests/: test_hub.py  test_integration.py  test_kernels.py  (+3 more)
(+8 files in other folders)
