[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rat-embed"
version = "0.1.0"
description = "Relative Anchor Translation: zero-shot embedding space translation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
models = ["sentence-transformers>=2.2"]
dev = ["pytest>=7.0", "ruff>=0.1"]

[tool.hatch.build.targets.wheel]
packages = ["rat"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
