[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rat-embed"
version = "0.3.0"
description = "Relative Anchor Translation: zero-shot embedding space translation via similarity profiles"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "So Jiro" },
]
keywords = [
    "embedding",
    "zero-shot",
    "model translation",
    "relative representation",
    "cross-model retrieval",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
models = ["sentence-transformers>=2.2"]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.urls]
Homepage = "https://github.com/jiro-prog/rat-experiment"
Repository = "https://github.com/jiro-prog/rat-experiment"
Paper = "https://zenodo.org/records/19401277"
Issues = "https://github.com/jiro-prog/rat-experiment/issues"

[tool.hatch.build.targets.sdist]
exclude = [
    "data/",
    "experiments/",
    "examples/",
    "results/",
    "figures/",
    "paper/",
    "scripts/",
    "src/",
    "*.npy",
    "config.py",
    "requirements.txt",
    "RAT-phase0-experiment.md",
]

[tool.hatch.build.targets.wheel]
packages = ["rat"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
